<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorGray"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/gowtham_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gowtham_next_trip"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/what_next_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/what_is_your_next_trip"
                android:textSize="18sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/gowtham_text" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circular_image"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/titi_travel"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_home_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/what_next_trip"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                android:fitsSystemWindows="true">

                <RelativeLayout
                    android:id="@+id/relative_home_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/red_image"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_lens_purple_24dp"
                        android:layout_marginTop="0dp"
                        />

                    <TextView
                        android:id="@+id/from"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/from"
                        android:textSize="20sp"
                        android:layout_toEndOf="@id/red_image"
                        android:layout_marginStart="16dp"/>

                    <TextView
                        android:id="@+id/landing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bangalore"
                        android:paddingTop="5dp"
                        android:layout_toEndOf="@id/red_image"
                        android:layout_below="@id/from"
                        android:layout_marginStart="16dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="20sp"
                        android:textStyle="bold"/>

                    <ImageView
                        android:id="@+id/green_image"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="60dp"
                        android:src="@drawable/ic_lens_green_24dp"
                        android:layout_below="@id/landing"/>

                    <TextView
                        android:id="@+id/to"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to"
                        android:layout_toEndOf="@id/green_image"
                        android:layout_below="@id/landing"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="40dp"
                        android:textStyle="normal"
                        android:textSize="20sp"/>

                    <TextView
                        android:id="@+id/second_landing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/chennal"
                        android:layout_toEndOf="@id/green_image"
                        android:paddingTop="10dp"
                        android:layout_below="@id/to"
                        android:layout_marginStart="16dp"
                        android:textSize="20sp"
                        android:textColor="@color/colorBlue"
                        android:textStyle="bold"/>

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/to_and_fro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/ic_swap_vert_black_24dp"
                        android:layout_marginTop="75dp"

                        android:background="@drawable/img_round"
                        android:layout_marginEnd="8dp"/>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/trip_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/card_view_home_page"
                app:cardElevation="4dp"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:fitsSystemWindows="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/choose_trip_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_your_trip_date"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:textSize="20sp"
                        android:textColor="#000"/>

                    <Button
                        android:id="@+id/your_trip_date"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/choose_trip_date"
                        android:layout_marginStart="50dp"
                        android:drawableEnd="@drawable/ic_date_range_black_24dp"/>


                </RelativeLayout>

            </androidx.cardview.widget.CardView>




            <TextView
                android:id="@+id/how_many_seat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/trip_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/how_many_seats_you_want"
                android:layout_marginTop="20dp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/how_many_seat"
                android:id="@+id/linear_home"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:id="@+id/linear_text_seats"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:orientation="horizontal"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/how_many_seat">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/find_your_seat"
                            android:padding="10dp"
                            android:text="@string/seat_one"
                            android:textStyle="bold"
                            android:textColor="@color/colorOrange"
                            android:textSize="20sp"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_2_seat"
                            android:background="@drawable/round_btn"
                            android:layout_marginStart="20dp"
                            android:textSize="20sp"
                            android:focusable="true"
                            android:textStyle="bold"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_3_seat"
                            android:background="@drawable/round_btn"
                            android:layout_marginStart="20dp"
                            android:textStyle="bold"
                            android:textSize="20sp"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_4_seat"
                            android:textSize="20sp"
                            android:background="@drawable/round_btn"
                            android:layout_marginStart="20dp"
                            android:textStyle="bold"/>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_5_seat"
                            android:background="@drawable/round_btn"
                            android:layout_marginStart="20dp"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_6_seat"
                            android:textSize="20sp"
                            android:background="@drawable/round_btn"
                            android:textStyle="bold"
                            android:layout_marginStart="20dp"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_7_seat"
                            android:background="@drawable/round_btn"
                            android:textSize="20sp"
                            android:layout_marginStart="20dp"
                            android:textStyle="bold"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_8_seat"
                            android:background="@drawable/round_btn"
                            android:layout_marginStart="20dp"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_9_seat"
                            android:background="@drawable/round_btn"
                            android:layout_marginStart="20dp"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_10_seat"
                            android:background="@drawable/round_btn"
                            android:layout_marginStart="20dp"
                            android:textSize="20sp"
                            android:textStyle="bold"/>

                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

            <TextView
                android:id="@+id/comfort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_your_comfort"
                app:layout_constraintTop_toBottomOf="@id/linear_home"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_marginStart="8dp"/>

            <LinearLayout
                android:id="@+id/linear_bus_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:weightSum="3"
                app:layout_constraintTop_toBottomOf="@id/comfort"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <Button
                    android:id="@+id/ac_bus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_btn"
                    android:text="@string/ac_bus"
                    android:textSize="16sp"
                    android:textAllCaps="false"
                    android:focusable="true"
                    android:clickable="true"
                    android:textStyle="normal"
                    android:layout_marginStart="20dp"/>

                <Button
                    android:id="@+id/non_ac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/round_btn"
                    android:textAllCaps="false"
                    android:text="@string/non_ac"
                    android:textSize="16sp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/find_your_seat"
                    android:textAllCaps="false"
                    android:text="@string/sleeper"
                    android:textSize="16sp"
                    android:textColor="@color/colorOrange"/>


            </LinearLayout>


            <Button
                android:id="@+id/find_your_bus"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/linear_bus_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/find_your_bus"
                android:layout_marginTop="10dp"
                android:background="@drawable/your_bus"
                android:textColor="@color/white"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>